--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,9 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: https://organizations.us-east-1.amazonaws.com/
+  region: "eu-central-1"
   bucket: "activestoragerails271118"
+
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
